@startuml ER_DevCenter

!theme plain
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80

hide circle
skinparam class {
  BackgroundColor #FEFEFE
  BorderColor #333333
  ArrowColor #333333
  FontSize 13
}

' ═══════════════════════════════
'  ПОЛЬЗОВАТЕЛИ (SSO)
' ═══════════════════════════════

entity "users" as users {
  * id : string <<PK>>
  --
  * email : varchar(255) <<unique>>
  * password_hash : bytea
  * display_name : varchar(255)
  * role : enum(developer, moderator, admin)
  * status : enum(active, suspended, deleted)
  * email_verified : boolean
  * created_at : timestamp
  * updated_at : timestamp
}

entity "sessions" as sessions {
  * id : string <<PK>>
  --
  * user_id : string <<FK>>
  * user_agent : text
  * ip_address : varchar(45)
  * refresh_token_hash : varchar(255)
  * created_at : timestamp
  * last_used_at : timestamp
  * expires_at : timestamp
  * revoked : boolean
  revoked_at : timestamp
}

' ═══════════════════════════════
'  ВЫЧИСЛИТЕЛЬНЫЕ УЗЛЫ (Orchestrator)
' ═══════════════════════════════

entity "nodes" as nodes {
  * id : bigint <<PK>>
  --
  * owner_id : string <<FK>>
  * address : varchar(255)
  * token_hash : bytea
  * api_token : varchar(255)
  region : varchar(100)
  * status : enum(unauthorized, online, offline, maintenance)
  cpu_cores : int
  total_memory_bytes : bigint
  total_disk_bytes : bigint
  agent_version : varchar(50)
  * last_ping_at : timestamp
  * created_at : timestamp
  * updated_at : timestamp
}

' ═══════════════════════════════
'  СЕРВЕРНЫЕ БИЛДЫ (Orchestrator)
' ═══════════════════════════════

entity "server_builds" as sbuilds {
  * id : bigint <<PK>>
  --
  * owner_id : string <<FK>>
  * game_id : bigint
  * uploaded_by : bigint <<FK>>
  * version : varchar(100)
  * image_tag : varchar(255)
  * protocol : enum(tcp, udp, websocket, webrtc)
  * internal_port : int
  * max_players : int
  file_url : varchar(512)
  file_size : bigint
  * created_at : timestamp
}

' ═══════════════════════════════
'  ЭКЗЕМПЛЯРЫ СЕРВЕРОВ (Orchestrator)
' ═══════════════════════════════

entity "instances" as instances {
  * id : bigint <<PK>>
  --
  * owner_id : string <<FK>>
  * node_id : bigint <<FK>>
  * server_build_id : bigint <<FK>>
  * game_id : bigint
  name : varchar(255)
  * build_version : varchar(100)
  * protocol : enum(tcp, udp, websocket, webrtc)
  * host_port : int
  * internal_port : int
  * status : enum(starting, running, stopping, stopped, crashed)
  player_count : int
  queue_size : int
  * max_players : int
  developer_payload : jsonb
  * server_address : varchar(255)
  * started_at : timestamp
  * created_at : timestamp
  * updated_at : timestamp
}

' ═══════════════════════════════
'  ПОЛИТИКИ ОРКЕСТРАЦИИ (Orchestrator)
' ═══════════════════════════════

entity "game_policies" as policies {
  * game_id : bigint <<PK>>
  --
  * owner_id : string <<FK>>
  * mode : enum(disabled, keep_alive, scale_to_zero)
  * target_instances : int
  * auto_restart : boolean
  scale_to_zero_timeout : int
  default_build_version : varchar(100)
  max_players_per_instance : int
  max_instances_per_game : int
  * scale_behavior : enum(spawn, queue)
  node_preference : varchar(50)
  * queue_location : enum(client, server)
  queue_scale_up_threshold : int
  queue_reservation_seconds : int
  queue_max_wait_seconds : int
  queue_heartbeat_timeout : int
  * created_at : timestamp
  * updated_at : timestamp
}

' ═══════════════════════════════
'  АУДИТ-ЛОГ ОЧЕРЕДИ (Orchestrator)
' ═══════════════════════════════

entity "queue_events" as qevents {
  * id : bigint <<PK>>
  --
  * game_id : bigint
  * player_id : string
  * event_type : enum(join, reserved, connected, timeout, leave, cancel)
  instance_id : bigint <<FK>>
  wait_seconds : int
  * created_at : timestamp
}

' ═══════════════════════════════
'  СВЯЗИ
' ═══════════════════════════════

' --- SSO ---
users ||--o{ sessions : "user_id"

' --- Ноды ---
users ||--o{ nodes : "owner_id"

' --- Билды ---
users ||--o{ sbuilds : "owner_id"
users ||--o{ sbuilds : "uploaded_by"

' --- Инстансы ---
users ||--o{ instances : "owner_id"
nodes ||--o{ instances : "node_id"
sbuilds ||--o{ instances : "server_build_id"

' --- Политики ---
users ||--o{ policies : "owner_id"

' --- Очередь ---
qevents }o--o| instances : "instance_id"

@enduml
